# hello-world-pkg

./: README.md  pyproject.toml
.github/workflows/: publish.yml
src/hello_world_pkg/: __init__.py
